# fogopulse

./: .env.example  .gitignore  LICENSE  README.md  hack.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-10-deploy-program-to-fogo-testnet.md  1-11-initialize-globalconfig-and-create-test-pools.md  1-2-configure-shadcn-ui-and-theme-system.md  1-5-implement-pool-account-structure.md  1-6-implement-epoch-account-structure.md  1-7-implement-userposition-account-structure.md  1-8-integrate-pyth-lazer-ed25519-verification.md  1-8.1-pyth-lazer-version-research.md  1-9-integrate-fogo-sessions-sdk.md  2-1-implement-buy-position-instruction.md  2-10-add-trade-preview-calculations.md  2-11-implement-epoch-auto-creation.md  2-11.1-admin-force-close-epoch.md  2-11.2-fix-pyth-lazer-api-route.md  2-11.3-increase-oracle-staleness-threshold.md  2-11.4-implement-advance-epoch-instruction.md  (+84 more)
anchor/: .env.example  Anchor.toml  package.json  tsconfig.json
anchor/programs/fogopulse/: Cargo.toml
anchor/programs/fogopulse/src/: constants.rs  errors.rs  events.rs  lib.rs  session.rs
anchor/programs/fogopulse/src/instructions/: admin_close_config.rs  admin_close_epoch.rs  admin_close_lp_share.rs  admin_close_pool.rs  admin_close_position.rs  admin_force_close_epoch.rs  admin_normalize_lp_shares.rs  admin_seed_liquidity.rs  admin_sync_reserves.rs  advance_epoch.rs  buy_position.rs  claim_payout.rs  claim_refund.rs  crank_process_withdrawal.rs  create_epoch.rs  create_pool.rs  deposit_liquidity.rs  emergency_freeze.rs  initialize.rs  mod.rs  pause_pool.rs  process_withdrawal.rs  request_withdrawal.rs  resume_pool.rs  sell_position.rs  settle_epoch.rs  timeout_force_close_epoch.rs  update_config.rs
anchor/programs/fogopulse/src/state/: config.rs  epoch.rs  lp.rs  mod.rs  pool.rs  position.rs
anchor/programs/fogopulse/src/utils/: caps.rs  cpmm.rs  fees.rs  mod.rs  oracle.rs
crank-bot/: .env.example  DEPLOYMENT.md  README.md  crank-bot.ts  ecosystem.config.cjs  package.json  setup-fund-trade-bots.ts  setup-trade-bots.ts  trade-bot.ts
docs/: context-handoff-2026-03-11.md  fogo-testnet-dev-notes.md  fogo-testnet-setup.md  on-chain-structure.md  pyth-lazer-ed25519-integration.md
web/: .env.example  jest.config.js  jest.setup.ts  package.json  tsconfig.json
(+319 files in other folders)
