[package]
name = "fogopulse"
version = "0.1.0"
description = "FOGO Pulse - Prediction market on FOGO chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fogopulse"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["associated_token"] }

# Pyth Lazer integration for oracle price verification
# NOTE: Version 0.5.0 with "cpi" feature is required for CPI support
pyth-lazer-solana-contract = { version = "0.5.0", features = ["no-entrypoint", "cpi"] }

# FOGO Sessions SDK for gasless session-based transactions
# Enables dual-signature pattern: accepts either direct wallet or session account
# Version 0.7.5 fixes Bytes constraints bug from earlier versions
fogo-sessions-sdk = { version = "0.7.5", features = ["anchor"] }

